<resources>
    <string name="app_name">CricketApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tournament_name">Tournament Name<sup>*</sup></string>
    <string name="club_name">Club/Organization Name<sup>*</sup></string>
    <string name="season_name">Season/Year<sup>*</sup></string>
    <string name="ball_name">Ball Type<sup>*</sup></string>
    <string name="city">City<sup>*</sup></string>
    <string name="year">Established Year<sup>*</sup></string>
    <string name="support_detail">Mail us at support@enfotrix.com
Call or Whatsapp at +9290939992</string>
</resources>