<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateClubFragment"
    android:padding="30dp">


    <TextView
        android:id="@+id/createClubNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/club_name" />


    <EditText
        android:id="@+id/createClubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/createClubCityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/city" />


    <EditText
        android:id="@+id/createClubCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/createClubYearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/year" />


    <EditText
        android:id="@+id/createClubYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/clubBallTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ball_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <ToggleButton
            android:id="@+id/createClubButtonLeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leather Ball"
            android:layout_marginEnd="10dp"/>

        <ToggleButton
            android:id="@+id/createClubButtonTape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tape Ball"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/createClubButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Tournament"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>