<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".fragments.CreateTournamentFragment">

    <TextView
        android:id="@+id/createTournamentNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_name" />


    <EditText
        android:id="@+id/createTournamentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/createTournamentClubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/club_name" />


    <EditText
        android:id="@+id/createTournamentClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/createTournamentSeasonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/season_name" />


    <EditText
        android:id="@+id/createTournamentSeason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Date" />


            <EditText
                android:id="@+id/createTournamentStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End Date" />


            <EditText
                android:id="@+id/createTournamentEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tournamentBallTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ball_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <ToggleButton
            android:id="@+id/createTournamentButtonLeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leather Ball"
            android:layout_marginEnd="10dp"/>

        <ToggleButton
            android:id="@+id/createTournamentButtonTape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tape Ball"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/createTournamentButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Tournament"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
